add rider details
